[package]
name = "rust-on-stm32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1.0.0"
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", features = [ "device" ] }
oorandom = "11.1.3"
alloc-cortex-m = "0.4.3"
spin = "0.9.8"
stm32f4 = "0.15.1"

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["rt", "stm32f411"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[features]
default = [
    "alloc",
    # "serial"
]
serial = []
alloc = []
